--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- This file will be updated as I learn JS :D -->
 <html>
   <head>
     <meta charset='utf-8'>
@@ -8,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Robert Catron by sabersamus</title>
+    <title>Robert Catron/</title>
   </head>
 
   <body>
