Seeing what some stuff does

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@ I'm hoping to move to c++ or c# relatively soon. </p>
       </section>
     </div>
 
+    <header>
+      <div class="container">
+        <h1>Hm, lets see what this does...</h1>
+           <section id="extra_content">
+             <p>Testing testing 123</p>
+           </section>
+      </div>
+    </header>
     
   </body>
 </html>
