--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <div class="container">
       <section id="main_content">
+      <h2>About me:</h2>
         <p>My name is Robert Catron. I'm in my late teen years, and I've started to learn how to program Java. 
 I'm hoping to move to c++ or c# relatively soon. </p>
 
@@ -36,14 +37,5 @@ I'm hoping to move to c++ or c# relatively soon. </p>
       </section>
     </div>
 
-    <header>
-      <div class="container">
-        <h1>Hm, lets see what this does...</h1>
-           <section id="extra_content">
-             <p>Testing testing 123</p>
-           </section>
-      </div>
-    </header>
-    
   </body>
 </html>
