--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <section id="main_content">
       <h2>About me:</h2>
-        <p>My name is Robert Catron. I'm in my late teen years, and I've started to learn how to program Java. 
+        <p>My name is Robert Catron, or as I'm more commonly known online - 'Sabersamus'. I'm in my late teen years, and I've started to learn how to program Java. 
 I'm hoping to move to c++ or c# relatively soon. </p>
 
 <p>I usually spend my free time playing video games, or developing plugins for <a href="http://bukkit.org/" target="_blank">Bukkit</a>.</p>
