--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>My name is Robert Catron, or as I'm more commonly known online - 'Sabersamus'. I'm in my late teen years, and I've started to learn how to program Java. 
 I'm hoping to move to c++ or c# relatively soon. </p>
 
-<p>I usually spend my free time playing video games, or developing plugins for <a href="http://bukkit.org/profiles/Sabersamus" target="_blank">Bukkit</a>.</p>
+<p>I usually spend my free time playing video games, or developing plugins for <a href="http://dev.bukkit.org/profiles/Sabersamus" target="_blank">Bukkit</a>.</p>
 
 <p>What I really want to do is be a game software developer for either Bethesda or 2K Games. </p>
       </section>
